--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>域名已转移</title>
     <h2 align="center">域名已转移，点击跳转新域名</h2>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://pic.imgdb.cn/item/6692e0edd9c307b7e9d99261.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./Genshin/style.css">
 </head>
 
